Views: Pages: add settings page
Signed-off-by: Jason Zhang <jason.gp.zhang@gmail.com>

--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -44,7 +44,8 @@
 
             <ui:NavigationView.FooterMenuItems>
                 <!-- Settings -->
-                <ui:NavigationViewItem Content="Settings">
+                <ui:NavigationViewItem Content="Settings"
+                                       TargetPageType="{x:Type pages:SettingsPage}">
                     <ui:NavigationViewItem.Icon>
                         <ui:SymbolIcon Symbol="Settings24"/>
                     </ui:NavigationViewItem.Icon>
