Views: Windows: MainWindow: navigate to home page when window is loaded
Signed-off-by: Jason Zhang <jason.gp.zhang@gmail.com>

--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -29,7 +29,8 @@
         <!-- Title Bar -->
         <ui:TitleBar Grid.Row="0"/>
 
-        <ui:NavigationView Grid.Row="1"
+        <ui:NavigationView x:Name="NavigationView"
+                           Grid.Row="1"
                            IsBackButtonVisible="Collapsed"
                            IsPaneOpen="False">
             <ui:NavigationView.MenuItems>
