Views: Windows: MainWindow: change opened panel length to 280epx
Signed-off-by: Jason Zhang <jason.gp.zhang@gmail.com>

--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -31,6 +31,7 @@
 
         <ui:NavigationView x:Name="NavigationView"
                            Grid.Row="1"
+                           OpenPaneLength="280"
                            IsBackButtonVisible="Collapsed"
                            IsPaneOpen="False">
             <ui:NavigationView.MenuItems>
