Views: Windows: MainWindow: update layout
New changes for the layout:
 - Change the default and minimal height to 620epx.
 - Change the default and minimal width to 1000epx.
 - Change the padding of the top to 40epx, and the left/right
   to 36epx according to the spacing in the design guidance
   of WinUI 3 Gallery.

Signed-off-by: Jason Zhang <jason.gp.zhang@gmail.com>

--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -12,8 +12,10 @@
                  WindowCornerPreference="Default"
                  WindowStartupLocation="CenterScreen"
                  Title="MainWindow"
-                 Height="450"
-                 Width="800">
+                 Height="620"
+                 Width="1000"
+                 MinHeight="620"
+                 MinWidth="1000">
     <ui:FluentWindow.InputBindings>
         <KeyBinding Key="F"
                     Command="{Binding ElementName=AutoSuggestBox, Path=FocusCommand}"
@@ -31,6 +33,7 @@
 
         <ui:NavigationView x:Name="NavigationView"
                            Grid.Row="1"
+                           Padding="36,40,36,0"
                            OpenPaneLength="280"
                            IsBackButtonVisible="Collapsed"
                            IsPaneOpen="False">
