--- a/Views/Pages/HomePage.xaml
+++ b/Views/Pages/HomePage.xaml
@@ -5,7 +5,36 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Tumbleweed.Views.Pages"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800">
+      d:DesignHeight="450"
+      d:DesignWidth="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="200"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- Discovered Devices -->
+            <Border Grid.Column="0"
+                    CornerRadius="8">
+            </Border>
+
+            <!-- Summary -->
+            <Border Grid.Column="1"
+                    CornerRadius="8"
+                    Margin="16,0,0,0">
+            </Border>
+        </Grid>
+
+        <!-- Tasks -->
+        <Border Grid.Row="1"
+                CornerRadius="8"
+                Margin="0,16">
+        </Border>
     </Grid>
 </Page>
